k8s/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: hbm-rag-mysql
  namespace: class-2
spec:
  selector:
    app: hbm-rag-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  type: ClusterIP
